# folio-insights

./: .continue-here.md  .dockerignore  .env.example  .gitignore  2026-04-19_Philosophy.md  Dockerfile  PRD-v2.0-draft-2.md  README.md  pyproject.toml  railway.toml
.claude/: bootup.json
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-BRIEF.md
.planning/debug/: corpus-processing-no-extraction.md  create-corpus-silent-fail.md  llm-api-config.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-ROADMAP.md
.planning/phases/: COMPREHENSIVE-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: __init__.py  main.py
api/db/: __init__.py  models.py  session.py
api/models/: discovery.py  processing.py
api/routes/: __init__.py  corpus.py  discovery.py  export.py  processing.py  review.py  source.py  tree.py  (+1 more)
scripts/: seed_demo_corpus.py
tests/: conftest.py  test_bridge.py  test_classification.py  test_cli.py  test_contradictions.py  test_corpus_api.py  test_dedup.py  test_discovery_api.py  test_export_api.py  test_extraction.py  test_folio_tagging.py  test_hierarchy.py  test_ingestion.py  test_merging.py  test_output.py  test_owl_export.py  test_processing_api.py  test_review_api.py  test_task_discovery.py  test_task_review_api.py  test_upload_api.py
viewer/: package-lock.json  package.json  svelte.config.js  vite.config.ts
(+225 files in other folders)
