[project]
name = "folio-insights"
version = "0.1.0"
description = "Extract structured advocacy knowledge from legal textbooks and map to FOLIO ontology"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "rdflib>=7.6.0",
    "lxml>=5.0",
    "sentence-transformers>=3.0.0",
    "instructor>=1.14.0",
    "click>=8.0.0",
    "aiosqlite>=0.20.0",
    "folio-python>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.3",
]

[project.scripts]
folio-insights = "folio_insights.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folio_insights"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
testpaths = ["tests"]
markers = [
    "integration: tests requiring folio-enrich on disk",
]
